# lyapunov-fractal-lab

./: README.md  pyproject.toml
lyaplab/: __init__.py  cli.py  core.py  orbit.py  report.py  report_cli.py  wordscan.py
notebooks/: lyapunov-orbit-density.ipynb  lyapunov-sequence-tour.ipynb
reports/: orbit-density-sidecar.md  short-word-scan.md
scripts/: generate_gallery.py
tests/: test_core.py  test_report.py  test_wordscan.py
